# scripts

./: .gitignore  .gitmodules  LICENSE  Pipfile  README.md  activate-gkeep.scpt  add2md.sh  addTodo.py  add_definition.py  add_definition_alias.py  aesenc.sh  an.go  animalhash.py  animalhash.sh  animaljob.sh  ankivocab.py  asmr-to-pinboard-format.py  asmr.go  asmr.py  asmr2pinboard.py  backlinks.go  backlinks.py  backup_notes.py  batrem.go  biblio.py  bignotes.py  bike_tyre_pressure.py  bookmark.py  bookmarks.go  braille.go  budget.go  budget.py  cal.py  caljournal.py  capture.py  cards.go  cards.py  catwithnewline.py  check_img_nan.py  chesstc.go  (+213 more)
animalhash/: Makefile  adjectives.go  animalhash.go  animals.go  colours.go
asmr/: Cargo.toml
autohotkey/: copy-text-as-markdown.ahk  focus-spotify.ahk  loop-asmr.ahk  mediakeys.ahk  mute_current_application.ahk  my-keybinds.ahk  pubg.ahk  specific_apps.ahk  text-replacements.ahk  web-search.ahk
backlinks/: Cargo.toml
baseconv/: main.go
batrem/: Cargo.toml
beacon/: beacon-setup.py  beacon-setup.sh
blc/: blc.js  package.json
bookmarklets/: trello.js
bookmarks/: bookmark.go  go.mod  go.sum  main.go
books/: books.py
brailleFuncs/: brailleFuncs.go
budget/: Cargo.toml
capture/: capture.py  capture_note.py  literature.py  liturl.py
convert/: to_epub.sh  to_html.sh
covid/: corona-numbers  corona.py
critic/: Cargo.toml
custom-css/: hltv.css  youtube-playlist.css
mdwiki-rs/: Cargo.toml  README.md
mdwiki-rs/src/: contents.rs  main.rs  routes.rs
mdwiki-rs/templates/: edit.html  view.html
randomasmr/: Cargo.toml
randomasmr/src/: main.rs
(+179 files in other folders)
