[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Chris Davison <c.jr.davison@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
numpy = "^1.16"
requests = "^2.21"
toolz = "^0.9.0"
sklearn = "^0.0.0"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
