[package]
name = "mdwiki-rs"
version = "0.1.0"
authors = ["Chris Davison <c.jr.davison@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
markdown = "0.2.0"
handlebars = { version = "3.0.0", features = ["dir_source"] }
