[package]
name = "randomasmr"
version = "0.1.0"
authors = ["Chris Davison <c.jr.davison@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.10.6", features=["blocking"]}
shellexpand = "2.0.0"
regex = "1.3.9"
rand = "0.7.3"
